<resources>
    <string name="app_name">Part-Timer</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_hint">username</string>
    <string name="submit_button">submit</string>
    <string name="login_with_google">Login with Google</string>
    <string name="off_campus">OFF-Campus</string>
    <string name="on_campus">ON_Campus</string>
    <string-array name="weekly_monthly">
        <item>Monthly</item>
        <item>Weekly</item>
    </string-array>

    <string name="page_title">Home</string>
    <string name="greeting">Good Morning User</string>
    <string name="progress_text">"Weekly Hours"</string>
    <string-array name="drop_down">
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="hours">Total No Of Hours:</string>

    <string name="btn_calendar">Calendar</string>
    <string name="btn_stats">Stats</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_logout">Logout</string>

    <string name="info">info</string>
    <string name="info_text">Welcome to Part-timer

        ----------------------------------------------------------------------------\n\n
        Home:\n\n
        The Home page shows the check in and check out times when you enter and exit a location. You may edit these logs at any time.
        The Total number of hours worked on any given day and total estimated pay for the current week will be shown in the home page.
        \n\n
        ----------------------------------------------------------------------------\n\n
        Stats:
        \n\n
        The Stats page has a circular progress bar that shows the total hours completed during the current week. A bar chart just bellow that displays the hours worked each day of the week.
        You can switch to monthly stats option which shows the total number of hours worked during the current month.

        \n\n
        ---------------------------------------------------------------------------- \n\n
        Settings:\n\n
        In the settings page, you can set your work location. You can also switch between a 24 hour and 12 hour time format.
        You can enter your hourly rate of pay for your current part time job in order to allow us to display your weekly estimate pay displayed on the home page.
        You can contact us by clicking on the mail icon in the Settings page.
        \n\n

    </string>

    <!--add_logtime.xml-->
    <string name="checkIn">Check In</string>
    <string name="checkOut">Check Out</string>

    <!--home_layout-->
    <string name="estimatedPay">Estimated pay: </string>
    <string name="editLog">Edit the Log times</string>
    <string name="addLog">Add the Log times</string>

    <!--settings_layout-->
    <string name="settings">Settings</string>
    <string name="editWorkLocation">Edit Work location</string>
    <string name="addWork">Add Work</string>
    <string name="twentyFourFormat">24h format:</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="payPerHour">Pay per hour :</string>
    <string name="ok">Ok</string>
    <string name="contact">Contact</string>
    <string name="contactInfo">We love to get suggestions, email part.timer@helpdesk.com</string>


</resources>
