<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSky"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/lbl_part-timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_title"
        android:textSize="40sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:shadowColor="@color/colorBlack"
        android:shadowDx="-10"
        android:shadowDy="-10"
        android:shadowRadius="2"
        />

    <TextView
        android:id="@+id/lbl_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_below="@id/lbl_part-timer"/>
    <View
        android:layout_below="@id/lbl_part-timer"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/colorBlack"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_hours"
        android:text="@string/hours"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

    <android.support.design.widget.BottomNavigationView
       android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"
        android:background="@color/colorWhite"
>
    </android.support.design.widget.BottomNavigationView>


</RelativeLayout>
